[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "libactionkv"
path = "src/akv_mem.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
crc = "1.7"
serde = "1"
serde_derive = "1"
